<resources>
    <string name="app_name">okhttpdemo</string>
    <string name="action_settings">Settings</string>
    <string name="my_profile">My Profile</string>

    <string name="app_describe">This is mine, do you like it!</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="forgot_password">Lost your password</string>
    <string name="login_form">Login Form</string>
    <string name="login">Log in</string>
    <string name="copyright_describe">\@2017 All Rights Reserved. Alan Lee.</string>
    <string name="logo_for_logo">MIME for mine</string>
    <string name="account_not_longer_enough">请输入至少8个字符！</string>
    <string name="password_not_longer_enough">请输入至少20个字符！</string>
    <string name="login_fail">登录失败，请重新检查用户名和密码！</string>

</resources>
